// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`COMPONENT - Checkout renders correctly for "/delivery" route 1`] = `
Array [
  .c3 {
  background: #ffffff;
  color: #222222;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.2rem;
  font-weight: 700;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-left: 1px solid #b0b0b0;
}

.c2:last-child {
  border-right: 1px solid #b0b0b0;
}

.c0 {
  width: 100%;
  border-bottom: 1px solid #b0b0b0;
}

.c1 {
  max-width: 100rem;
  padding: 0 2rem;
  margin: 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 4rem;
}

@media (max-width:48em) {
  .c2:first-child {
    border-left: 0;
  }

  .c2:last-child {
    border-right: 0;
  }
}

@media (max-width:48em) {
  .c1 {
    padding: 0;
  }
}

<div
    className="c0"
  >
    <nav
      className="c1"
    >
      <a
        className="c2"
        data-testid="navigation-link"
        href="/checkout/delivery"
        onClick={[Function]}
      >
        <span
          className="c3"
        >
          1. Delivery
        </span>
      </a>
      <a
        className="c2"
        data-testid="navigation-link"
        href="/checkout/payment"
        onClick={[Function]}
      >
        <span
          className="c3"
        >
          2. Payment
        </span>
      </a>
      <a
        className="c2"
        data-testid="navigation-link"
        href="/checkout/review"
        onClick={[Function]}
      >
        <span
          className="c3"
        >
          3. Review
        </span>
      </a>
    </nav>
  </div>,
  .c0 {
  max-width: 100rem;
  padding: 0 2rem;
  margin: 0 auto;
  padding-top: 3rem;
  padding-bottom: 3rem;
}

.c3 {
  background: #00a09f;
  color: #ffffff;
  display: block;
  font-size: 1.8rem;
  font-weight: 600;
  padding: 1.2rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  max-width: 96rem;
  margin: 0 auto;
}

.c2 {
  bottom: 0;
  left: 0;
  padding: 1rem;
  position: fixed;
  width: 100%;
  background: #ffffff;
  border-top: 1px solid #b0b0b0;
}

.c1 {
  margin: 0;
  margin-bottom: 2rem;
  font-size: 3rem;
  font-weight: 700;
  line-height: 1;
}

<article
    className="c0"
  >
    <h1
      className="c1"
    >
      Delivery
    </h1>
    <div
      className="c2"
    >
      <a
        className="c3"
        data-testid="next-step-button"
        href="/checkout/payment"
        onClick={[Function]}
      >
        Continue to Payment
      </a>
    </div>
  </article>,
]
`;

exports[`COMPONENT - Checkout renders correctly for "/payment" route 1`] = `
Array [
  .c3 {
  background: #ffffff;
  color: #222222;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.2rem;
  font-weight: 700;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-left: 1px solid #b0b0b0;
}

.c2:last-child {
  border-right: 1px solid #b0b0b0;
}

.c0 {
  width: 100%;
  border-bottom: 1px solid #b0b0b0;
}

.c1 {
  max-width: 100rem;
  padding: 0 2rem;
  margin: 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 4rem;
}

@media (max-width:48em) {
  .c2:first-child {
    border-left: 0;
  }

  .c2:last-child {
    border-right: 0;
  }
}

@media (max-width:48em) {
  .c1 {
    padding: 0;
  }
}

<div
    className="c0"
  >
    <nav
      className="c1"
    >
      <a
        className="c2"
        data-testid="navigation-link"
        href="/checkout/delivery"
        onClick={[Function]}
      >
        <span
          className="c3"
        >
          1. Delivery
        </span>
      </a>
      <a
        className="c2"
        data-testid="navigation-link"
        href="/checkout/payment"
        onClick={[Function]}
      >
        <span
          className="c3"
        >
          2. Payment
        </span>
      </a>
      <a
        className="c2"
        data-testid="navigation-link"
        href="/checkout/review"
        onClick={[Function]}
      >
        <span
          className="c3"
        >
          3. Review
        </span>
      </a>
    </nav>
  </div>,
  .c0 {
  max-width: 100rem;
  padding: 0 2rem;
  margin: 0 auto;
  padding-top: 3rem;
  padding-bottom: 3rem;
}

.c10 {
  background: #00a09f;
  color: #ffffff;
  display: block;
  font-size: 1.8rem;
  font-weight: 600;
  padding: 1.2rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  max-width: 96rem;
  margin: 0 auto;
}

.c9 {
  bottom: 0;
  left: 0;
  padding: 1rem;
  position: fixed;
  width: 100%;
  background: #ffffff;
  border-top: 1px solid #b0b0b0;
}

.c1 {
  margin: 0;
  margin-bottom: 2rem;
  font-size: 3rem;
  font-weight: 700;
  line-height: 1;
}

.c4 {
  font-size: 1.8rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 400;
  font-weight: 400;
  line-height: 1.4;
  margin: 0;
  margin-bottom: 1rem;
}

.c4:last-child {
  margin-bottom: 0;
}

.c7 {
  font-size: 1.8rem;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  font-weight: 400;
  font-weight: 400;
  line-height: 1.4;
  margin: 0;
  margin-bottom: 1rem;
}

.c7:last-child {
  margin-bottom: 0;
}

.c2 {
  font-size: 1.8rem;
  text-align: center;
  margin: 10px;
}

.c5 {
  font-size: 1.8rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  font-weight: 400;
  line-height: 1.4;
  margin: 0;
  margin-bottom: 1rem;
  color: #9cc472;
}

.c5:last-child {
  margin-bottom: 0;
}

.c6 {
  font-size: 1.8rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 400;
  font-weight: 400;
  line-height: 1.4;
  margin: 0;
  margin-bottom: 1rem;
  color: #9cc472;
}

.c6:last-child {
  margin-bottom: 0;
}

.c3 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c8 {
  font-size: 1.2rem;
  font-weight: 700;
}

<article
    className="c0"
  >
    <h1
      className="c1"
    >
      Payment
    </h1>
    <section>
      <h3
        className="c2"
      >
        Order Summary
      </h3>
      <div
        className="c3"
      >
        <p
          className="c4"
        >
          Subtotal
        </p>
        <p
          className="c4"
        >
          $125.00
        </p>
      </div>
      <div
        className="c3"
      >
        <p
          className="c5"
        >
          Kohl's Cash & Discounts
        </p>
        <p
          className="c6"
        >
          -$18.75
        </p>
      </div>
      <div
        className="c3"
      >
        <p
          className="c7"
        >
          Shipping
        </p>
        <p
          className="c7"
        >
          FREE
        </p>
      </div>
      <p
        className="c6"
      >
        You have earned free shipping.
      </p>
      <div
        className="c3"
      >
        <p
          className="c7"
        >
          Tax
        </p>
        <p
          className="c7"
        >
          $6.38
        </p>
      </div>
      <div
        className="c3"
      >
        <span
          className="c8"
        >
          TOTAL $
          122.7
        </span>
      </div>
      <div
        className="c3"
      >
        <p
          className="c4"
        >
          Your Savings
        </p>
        <p
          className="c4"
        >
          $122.70
        </p>
      </div>
    </section>
    <div
      className="c9"
    >
      <a
        className="c10"
        data-testid="next-step-button"
        href="/checkout/review"
        onClick={[Function]}
      >
        Review Order
      </a>
    </div>
  </article>,
]
`;

exports[`COMPONENT - Checkout renders correctly for "/review" route 1`] = `
Array [
  .c3 {
  background: #ffffff;
  color: #222222;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.2rem;
  font-weight: 700;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-left: 1px solid #b0b0b0;
}

.c2:last-child {
  border-right: 1px solid #b0b0b0;
}

.c0 {
  width: 100%;
  border-bottom: 1px solid #b0b0b0;
}

.c1 {
  max-width: 100rem;
  padding: 0 2rem;
  margin: 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 4rem;
}

@media (max-width:48em) {
  .c2:first-child {
    border-left: 0;
  }

  .c2:last-child {
    border-right: 0;
  }
}

@media (max-width:48em) {
  .c1 {
    padding: 0;
  }
}

<div
    className="c0"
  >
    <nav
      className="c1"
    >
      <a
        className="c2"
        data-testid="navigation-link"
        href="/checkout/delivery"
        onClick={[Function]}
      >
        <span
          className="c3"
        >
          1. Delivery
        </span>
      </a>
      <a
        className="c2"
        data-testid="navigation-link"
        href="/checkout/payment"
        onClick={[Function]}
      >
        <span
          className="c3"
        >
          2. Payment
        </span>
      </a>
      <a
        className="c2"
        data-testid="navigation-link"
        href="/checkout/review"
        onClick={[Function]}
      >
        <span
          className="c3"
        >
          3. Review
        </span>
      </a>
    </nav>
  </div>,
  .c0 {
  max-width: 100rem;
  padding: 0 2rem;
  margin: 0 auto;
  padding-top: 3rem;
  padding-bottom: 3rem;
}

.c10 {
  background: #00a09f;
  color: #ffffff;
  display: block;
  font-size: 1.8rem;
  font-weight: 600;
  padding: 1.2rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  max-width: 96rem;
  margin: 0 auto;
}

.c9 {
  bottom: 0;
  left: 0;
  padding: 1rem;
  position: fixed;
  width: 100%;
  background: #ffffff;
  border-top: 1px solid #b0b0b0;
}

.c1 {
  margin: 0;
  margin-bottom: 2rem;
  font-size: 3rem;
  font-weight: 700;
  line-height: 1;
}

.c4 {
  font-size: 1.8rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 400;
  font-weight: 400;
  line-height: 1.4;
  margin: 0;
  margin-bottom: 1rem;
}

.c4:last-child {
  margin-bottom: 0;
}

.c7 {
  font-size: 1.8rem;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  font-weight: 400;
  font-weight: 400;
  line-height: 1.4;
  margin: 0;
  margin-bottom: 1rem;
}

.c7:last-child {
  margin-bottom: 0;
}

.c2 {
  font-size: 1.8rem;
  text-align: center;
  margin: 10px;
}

.c5 {
  font-size: 1.8rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  font-weight: 400;
  line-height: 1.4;
  margin: 0;
  margin-bottom: 1rem;
  color: #9cc472;
}

.c5:last-child {
  margin-bottom: 0;
}

.c6 {
  font-size: 1.8rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 400;
  font-weight: 400;
  line-height: 1.4;
  margin: 0;
  margin-bottom: 1rem;
  color: #9cc472;
}

.c6:last-child {
  margin-bottom: 0;
}

.c3 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c8 {
  font-size: 1.2rem;
  font-weight: 700;
}

<article
    className="c0"
  >
    <h1
      className="c1"
    >
      Review
    </h1>
    <section>
      <h3
        className="c2"
      >
        Order Summary
      </h3>
      <div
        className="c3"
      >
        <p
          className="c4"
        >
          Subtotal
        </p>
        <p
          className="c4"
        >
          $125.00
        </p>
      </div>
      <div
        className="c3"
      >
        <p
          className="c5"
        >
          Kohl's Cash & Discounts
        </p>
        <p
          className="c6"
        >
          -$18.75
        </p>
      </div>
      <div
        className="c3"
      >
        <p
          className="c7"
        >
          Shipping
        </p>
        <p
          className="c7"
        >
          FREE
        </p>
      </div>
      <p
        className="c6"
      >
        You have earned free shipping.
      </p>
      <div
        className="c3"
      >
        <p
          className="c7"
        >
          Tax
        </p>
        <p
          className="c7"
        >
          $6.38
        </p>
      </div>
      <div
        className="c3"
      >
        <span
          className="c8"
        >
          TOTAL $
          122.7
        </span>
      </div>
      <div
        className="c3"
      >
        <p
          className="c4"
        >
          Your Savings
        </p>
        <p
          className="c4"
        >
          $122.70
        </p>
      </div>
    </section>
    <div
      className="c9"
    >
      <a
        className="c10"
        data-testid="next-step-button"
        href="/cart"
        onClick={[Function]}
      >
        Place Order
      </a>
    </div>
  </article>,
]
`;
